# gif2acii

./: .gitignore  LICENSE  README.md  gif2acii.py  pyproject.toml  setup.py
giftwoascii/: __init__.py  main.py
