[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "giftwoascii"
version = "0.1.0"
description = "Converts images and GIFs into ASCII art in your terminal"
authors = [{name = "1ChaosUnderscore"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "Pillow>=12.1.0"
]

[project.urls]
Homepage = "https://github.com/1ChaosUnderscore/giftwoascii"

[project.scripts]
giftwoascii = "giftwoascii.main:main"